@@ -5,11 +5,11 @@
 
 	var options = [
 		[RenderLanguageDropdown, 'select', '$language',         TEXT_LANG],
-		[RenderCheckboxInput,    'input',  '$useThrowHistory',  TEXT_USE_THROW_HISTORY],
-		[RenderCheckboxInput,    'input',  '$useScoreHistory',  TEXT_USE_SCORE_HISTORY],
-		[RenderCheckboxInput,    'input',  '$useSubscore',      TEXT_USE_SUBSCR],
-		[RenderCheckboxInput,    'input',  '$useTimeTracking',  TEXT_USE_TIME_TRACK],
-		[RenderCheckboxInput,    'input',  '$useScoreEditor',   TEXT_USE_SCORE_EDIT]
+		[RenderCheckboxInput,    'div',  '$useThrowHistory',  TEXT_USE_THROW_HISTORY],
+		[RenderCheckboxInput,    'div',  '$useScoreHistory',  TEXT_USE_SCORE_HISTORY],
+		[RenderCheckboxInput,    'div',  '$useSubscore',      TEXT_USE_SUBSCR],
+		[RenderCheckboxInput,    'div',  '$useTimeTracking',  TEXT_USE_TIME_TRACK],
+		[RenderCheckboxInput,    'div',  '$useScoreEditor',   TEXT_USE_SCORE_EDIT]
 	];
 
 	RenderSettingsOptions(canvas, options, ROW_HEIGHT);
@@ -30,15 +30,24 @@
 	});
 }
 
-'static'; function RenderCheckboxInput(canvas, ctxitem) {
-	canvas.dom.type = 'checkbox';
-	canvas.dom.checked = appx.advctx[ctxitem];
+'static'; function RenderCheckboxInput(wrap, key, disabled = false) {
+	var width = wrap.height * 0.7 / wrap.width;
 
-	// Set callback for updating context
-	canvas.OnClick(() => {
-		appx.advctx[ctxitem] = !appx.advctx[ctxitem];
-		appx.DisplayPage(ID('PageAdvancedSettings'));
+	var div = wrap.AddElem(0.5 - width / 2, 0.15, width, 0.7);
+	div.AddClass("checkbox");
+	div.OnClick(() => {
+		appx.advctx[key] = !appx.advctx[key];
+		appx.RefreshPage();
 	});
+	if (disabled) div.dom.setAttribute("disabled", "");
+
+	var check = div.AddElem(0, 0, 1, 1, 'input', ID('Checkbox') + key);
+	check.dom.type = "checkbox";
+	check.dom.checked = appx.advctx[key];
+	check.dom.disabled = disabled;
+
+	var label = div.AddElem(0.1, 0.1, 0.8, 0.8, 'label');
+	label.dom.for = ID('Checkbox') + key;
 }
 
 'static'; function ApplyAdvancedSettings() {
